# lota-remotectl-ble-server

./: README.md
linux/: Cargo.toml  README-RPI.md  README.md
linux/src/: check_environment.rs  gatt_remotectl_server.rs
